# tarot-gpt

./: README.md  pyproject.toml  server.py  tarot_deck.py
